# ai-price-intelligence

./: .env.example  .gitignore  DECISIONS.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  weekly_refresh.yml
docs/: ARCHITECTURE.md  LISTING_COPY.md  PUBLISHING_RUNBOOK.md  RIGHTS.md  SEED_VERIFICATION.md
ingestion/: load_snowflake.py  models.py  normalize.py  run_refresh.py  scd2.py
ingestion/sources/: aws_pricing.py  azure_pricing.py  gcp_pricing.py  hf_leaderboards.py  seed_loader.py
ingestion/sources/seeds/: benchmarks.yaml  cortex_pricing.yaml  gpu_instances.yaml  llm_models.yaml  llm_pricing.yaml
native_app/: .snowflakeignore  snowflake.yml
native_app/app/: CHANGELOG.md  README.md  manifest.yml  setup_script.sql
native_app/scripts/: e2e_smoke.py
native_app/src/streamlit/: _logo_bytes.py  charts.py  demo_data.py  environment.yml  insights.py  main.py  model_ids.py  queries.py  session_data.py  theme.py
native_app/src/streamlit/.streamlit/: config.toml
native_app/src/streamlit/data/: price_snapshot.csv
native_app/src/streamlit/screens/: __init__.py  about.py  advisor.py  getting_started.py  model_advisor.py  overview.py  price_watch.py  setup.py
tests/: test_app_queries.py  test_azure_gpu_count.py  test_normalize.py  test_scd2.py  test_seed_validation.py
warehouse/: deploy.py
warehouse/sql/: 00_database.sql  01_tables.sql  02_views.sql  03_share.sql  04_quality_checks.sql
